--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ autopep8 == 1.5.4
 pycodestyle == 2.6.0
 opentrons >= 3.16.1
 flake8 == 3.8.3
-pytest == 5.0.1
+pytest >= 4.0.0
+pytest-cov >= 2.0.0
+pytest-dependency >= 0.3.2
