--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ pandas == 1.1.0
 pyyaml == 5.3.1
 autopep8 == 1.5.4
 pycodestyle == 2.6.0
+opentrons >= 3.16.1
+flake8 == 3.8.3
+pytest >= 4.0.0
+pytest-cov >= 2.0.0
+pytest-dependency >= 0.3.2
