Updated gitignore to ignore .vscode settings and launch jsons

--- a/.gitignore
+++ b/.gitignore
@@ -98,9 +98,9 @@ GitHub.sublime-settings
 
 # Visual Studio Code # 
 .vscode/* 
-!.vscode/settings.json 
+# !.vscode/settings.json 
 !.vscode/tasks.json 
-!.vscode/launch.json 
+# !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
 
