--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ pandas == 1.1.0
 pyyaml == 5.3.1
 autopep8 == 1.5.4
 pycodestyle == 2.6.0
-opentrons >= 3.16.1
-
+opentrons == 3.20.1
 aiohttp==3.4.4
 aionotify==0.2.0
 asgiref==3.2.10
@@ -19,6 +18,7 @@ chardet==3.0.4
 decorator==4.4.2
 flake8==3.8.3
 fuzzywuzzy==0.18.0
+graphene-django==2.13.0
 idna==2.8
 importlib-metadata==0.23
 isort==4.3.21
